# f5-api-security

./: .gitignore  README.md
.github/workflows/: build-and-push.yaml
deploy/: deploy.sh  f5-ai-security-values.yaml.example
deploy/ansible/group_vars/all/: secrets.yml.example  vars.yml
deploy/ansible/roles/f5xc_mesh/defaults/: main.yml
deploy/ansible/roles/f5xc_mesh/tasks/: approve_registration.yml  discover_tenant.yml  main.yml  poll_new_registration.yml  poll_prometheus.yml
deploy/f5-ai-security/: Chart.yaml  values.yaml
deploy/f5-ai-security/templates/: _helpers.tpl  deployment.yaml  route.yaml  service.yaml
deploy/helm/: Makefile  rag-values.yaml.example
deploy/helm/rag/: Chart.yaml  values.yaml
deploy/helm/rag/templates/: route-llamastack.yaml
deploy/local/: Makefile
docs/: f5_xc_deployment.md
frontend/: Containerfile  pyproject.toml
frontend/llama_stack_ui/distribution/ui/modules/: api.py  local_extractors.py  utils.py
frontend/llama_stack_ui/distribution/ui/page/distribution/: models.py  vector_dbs.py
frontend/llama_stack_ui/distribution/ui/page/playground/: chat.py
